<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginLeft="@dimen/keyboard_left_margin"
        android:layout_marginRight="@dimen/keyboard_left_margin"
        android:layout_marginBottom="@dimen/keyboard_bottom_margin"
        android:layout_height="@dimen/keyboard_row_height">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_1"
            android:background="@drawable/background_button_white">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_2">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_3">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_4">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_5">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_6">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_7">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_8">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_9">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:background="@drawable/background_button_white"
            android:text="@string/button_0">
        </androidx.appcompat.widget.AppCompatButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>