<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.keyboardai42.viewmodel.MainActivityViewModel" />
    </data>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="9"
        android:layout_marginLeft="@dimen/keyboard_space_row_three"
        android:layout_marginRight="@dimen/keyboard_space_row_three"
        android:layout_marginBottom="@dimen/keyboard_bottom_margin"
        android:layout_height="@dimen/keyboard_row_height">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/a"
            android:clickable="true"
            android:onClick="@{viewModel::minusButtonClick}"
            android:gravity="center"
            android:text="@string/button_minus"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::slashButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_slash">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::twoDotButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_two_dot">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::semicolonButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_semicolon">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::left_parenthesisButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_left_parenthesis">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::right_parenthesisButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_right_parenthesis">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::andButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_and">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::plusButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_plus">
        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/keyboard_normal_button_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="@{viewModel::braceButtonClick}"
            android:gravity="center"
            android:layout_marginLeft="@dimen/keyboard_left_margin"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/background_button_white"
            android:text="@string/button_braces">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</layout>